Fixed two bugs in Start screen (back button & icon visibility)
both bugs fixed at once by putting the “step” variable in the global
session instead of just the component state.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -125,6 +125,11 @@ a:hover {
 }
 
 
+.hidden {
+  visibility: hidden;
+}
+
+
 
 #mainMenuIcon {
   width: 60px;
